--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,33 @@
 <resources>
     <string name="app_name">Eformatic</string>
+    <string name="title_activity_course">CourseActivity</string>
+    <string name="title_activity_trainings">TrainingsActivity</string>
+    <string name="title_activity_training">TrainingActivity</string>
+    <string name="title_activity_video">VideoActivity</string>
+
+
+    <string name="title_activity_main">MainActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_login">eFormatic</string>
+
+    <string name="login">Connexion</string>
+    <string name="register">Inscription</string>
+    <string name="username">Pseudo</string>
+    <string name="password">Mot de passe</string>
+    <string name="keep_me_logged">Rester connecté</string>
+    <string name="forgot_password">Mot de passe oublié</string>
+    <string name="title_activity_main_activity2">MainActivity</string>
+
+    <string name="courses">Les cours vidéo</string>
+    <string name="watched">Visionnée</string>
+    <string name="free">Gratuit</string>
+    <string name="credits">%1$d crédits</string>
+    <string name="no_qcm">Pas de QCM disponible pour cette formation</string>
+
+    <string name="alert_credit_title">Pas assez de crédits</string>
+    <string name="alert_credit_message">Vous n\'avez pas assez de crédits pour pouvoir visionner cette vidéo\n(Crédits restants : %1$d)</string>
+    <string name="alert_congrats_title">Félicitations !</string>
+    <string name="alert_congrats_message">Vous venez de valider la formation : %1$s</string>
+
 </resources>
